# ai-zero-to-hero

./: .gitignore  CURRICULUM.md  README.md  pyproject.toml
daily-log/: TEMPLATE.md  day-00-baseline.md  day-01.md  day-02.md
plan/: week-1-foundations.md  week-2-agents-and-harness.md  week-3-rag-eval-data.md  week-4-training-serving-capstone.md
progress/: skills-matrix-template.md  skills-matrix.md
projects/: README.md
projects/nanogpt/: ABLATIONS.md  nanogpt.ipynb  nanogpt_v1.py  nanogpt_v2.py  nanogpt_v3.py  paratodos.txt
projects/toktool/: README.md  data_sample.json  data_sample.toml  data_sample.yaml  story-en.txt  story-fr.txt  story-pt.txt  toktool.py
resources/: papers.md  providers.md  reading.md  tools.md  using-agents.md  what-transfers.md
