[project]
name = "ai-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.12.1",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
    "torch>=2.13.0",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
]
